@@ -23,6 +23,10 @@ IN DEVELOPMENT
 
   BUGFIXES:
 
+    * Severe performance degradation in fetching from knit repositories to
+      packs due to parsing the entire revisions.kndx on every graph walk
+      iteration fixed by using the Repository.get_graph API. (Robert Collins)
+
   DOCUMENTATION:
 
     * Document outlining strategies for TortoiseBzr. (Mark Hammond)
